public/stylesheets/judging.css
body { width: auto; margin: 0 10px;}

.aside { width: 30%; }

body.login-page, body.forgot-password-page, body.reset-password-page { margin: 40px auto 0; width: 510px; }

.account-nav li { color: white; }

.input-help { display: none; }

.card.category .latest-comment { display: inline; font-style: italic;}

.thumbnail { float: left; margin: 0 10px 10px 0; }

.movie-icon.enabled { cursor: pointer;}
.movie-icon.disabled { opacity: 0.3;}
.movie-icon { position: relative; }
.movie-icon.large img.thumbnail { height: 100px; width: 100px; }
img.play-icon { position: absolute; }
img.play-icon.large { top:31px; left:31px;}
img.play-icon.small { top:8px; left:9px;}


button.hider { display: block; margin: 0 auto;}

.video-player { margin: 20px auto 10px; display: block;}

#judging-welcome { width: 500px; margin: 0 auto; border-top: 1px dotted #aaa; border-bottom: 1px dotted #aaa;}
#judging-welcome p { margin: 10px 0; }

.view.category-admin-note p { margin-bottom: 5px; }

